Upgraded Tomcat to 7.0.39
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@622 39555585-ee67-472c-bf1e-947fb1f6b7c6